# kestrel-feature-reflection

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
kestrel_feature_reflection/: __init__.py  analyzer.py  approval.py  component.yaml  db_helpers.py  economics.py  feature.py  formatters.py  hooks.py  models.py  on_stop_hook.py  prioritizer.py  prompts.py  retention.py  self_model.py  self_model_handler.py  ticket_creator.py  ticket_handler.py  training.py
kestrel_feature_reflection/checks/: __init__.py  arms.py  base.py  memory.py  mind.py
tests/: test_on_stop_reflection_hook.py  test_reflection_handler_wiring.py  test_reflection_propose_to_ticket.py  test_reflection_retention.py
