[project]
name = "kestrel-feature-reflection"
version = "0.1.0"
description = "Agent self-reflection and self-improvement feature for Kestrel Sovereign"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "kestrel-sovereign>=0.10.2,<1",
    "kestrel-sovereign-sdk>=0.13,<1",
    "aiosqlite>=0.21.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "pytest-timeout>=2.3.1",
]

[project.entry-points."kestrel_sovereign.features"]
ReflectionFeature = "kestrel_feature_reflection:ReflectionFeature"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kestrel_feature_reflection"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
